# Wirecord

./: .coverage  .gitignore  config.example.json  gateway_handler.py  gateway_logger.py  gateway_logger_config.py  gateway_logger_webhook.py  logger_with_forwarder.py  message_formatter.py  pyproject.toml  readme.md  requirements.txt  restart_logger.sh  setup_venv.sh  show_messages.py  start_logger.sh  stop_logger.sh  utils.py
config/: forwarder.json  forwarder.yaml
discordless/: __init__.py  addon.py  config.py  decoder.py  models.py  webhook.py
scripts/: restart.sh  start.sh  stop.sh
src/discord_logger/: __init__.py  __main__.py  config.py  config_loader.py
src/discord_logger/application/: __init__.py  capture_service.py  dedup_service.py
src/discord_logger/domain/: __init__.py  message.py
src/discord_logger/forwarder/: __init__.py  forwarder_service.py  message_formatter.py  webhook_client.py
src/discord_logger/infrastructure/capture/: mitm_addon.py
src/discord_logger/infrastructure/logging/: file_logger.py
src/discord_logger/infrastructure/persistence/: key_store.py
src/discord_logger/interfaces/: __init__.py  cli.py
tests/: conftest.py
tests/unit/: test_config.py  test_decoder.py  test_dedup.py  test_gateway_handler.py  test_gateway_logger.py  test_message.py  test_message_formatter.py  test_models.py  test_utils.py  test_webhook.py
