[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-gateway-logger"
version = "2.0.0"
description = "Capture et log en temps réel des messages Discord Gateway"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "alex_skyline"}]
dependencies = [
    "erlpack",
    "pyzstd",
    "mitmproxy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
discord-logger = "discord_logger.__main__:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/discord_logger --cov-report=term-missing"
