[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discordless"
version = "3.0.0"
description = "Discord traffic interceptor and webhook forwarder"
readme = "readme.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mitmproxy",
    "requests",
    "erlpack",
    "pyzstd",
    "filetype",
    "python-dateutil",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=discordless --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["discordless", "exporters"]
